--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
         <li><a href="store.html">Store</a></li>
         <li><a href="about.html">About</a></li>
         <hr />
-        <h1>Shop Title</h1>
+        <h1>Shop Title TEST</h1>
       </nav>
     </header>
     <section>
