--- a/about.html
+++ b/about.html
@@ -5,18 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="This is the description" />
     <link rel="stylesheet" href="styles.css" />
-
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
     <title>About</title>
   </head>
   <body>
-    <header>
-      <nav>
+    <header class="main-header">
+      <nav class="nav main-nav">
         <li><a href="index.html">Home</a></li>
         <li><a href="store.html">Store</a></li>
         <li><a href="about.html">About</a></li>
-        <hr />
-        <h1>Shop Title TEST</h1>
       </nav>
+      <h1 class="name name-large">Shop Title</h1>
     </header>
     <section>
       <h2>About</h2>
