--- a/about.html
+++ b/about.html
@@ -18,20 +18,24 @@
         <li><a href="store.html">Store</a></li>
         <li><a href="about.html">About</a></li>
       </nav>
-      <h1 class="name name-large">Shop Title</h1>
+      <h1 class="name name-large">Meno</h1>
     </header>
-    <section>
-      <h2>About</h2>
+    <section class="content-section container">
+      <h2 class="section-header">About</h2>
+      <img class="about-image" src="images/hands.jpg" />
+
       <p>
-        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-        mollit anim id est laborum."
+        Welcome to Meno. We're a community of women, men, families and employers
+        who've come together to raise awareness about the menopause and create
+        an environment of support and empowerment for women. We provide
+        education to employers about the menopause so they can understand the
+        needs of their female workforce. We provide women with tools,
+        information, advice and resources to support their health and wellbeing.
+        We provide consultations to GP services so that doctors can support to
+        their female patients in better ways. Our goal is to create a society
+        which is informed and actively supports the billion women globally who
+        are going through menopause right now.
       </p>
-      <img src="images/tech.jpg" />
       <p>
         "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
@@ -42,20 +46,22 @@
         mollit anim id est laborum."
       </p>
     </section>
-    <footer>
-      <h3>Shop Title</h3>
-      <ul>
-        <li>
-          <a href="https://instagram.com" target="_blank">
-            <img src="images/logo-instagram.svg"
-          /></a>
-        </li>
-        <li>
-          <a href="https://facebook.com" target="_blank"
-            ><img src="images/logo-facebook-2.svg"
-          /></a>
-        </li>
-      </ul>
+    <footer class="main-footer">
+      <div class="container main-footer-container">
+        <h3 class="name">Meno</h3>
+        <ul class="nav footer-nav">
+          <li>
+            <a href="https://instagram.com" target="_blank">
+              <img class="social-media-icon" src="images/logo-instagram.svg"
+            /></a>
+          </li>
+          <li>
+            <a href="https://facebook.com" target="_blank"
+              ><img class="social-media-icon" src="images/logo-facebook-2.svg"
+            /></a>
+          </li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
