--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
         <li><a href="store.html">Store</a></li>
         <li><a href="about.html">About</a></li>
       </nav>
-      <h1 class="name name-large">Shop Title</h1>
+      <h1 class="name name-large">Meno</h1>
       <button type="button">This is a button</button>
       <br />
       <br />
       <button>&#9658;</button>
     </header>
     <section>
-      <h2>Booking List</h2>
+      <h2 class="section-header">Booking List</h2>
       <div>
         <div>
           <strong>Date</strong>&lt;&gt;<span> Address</span>&lt;&gt;<span>
@@ -53,20 +53,22 @@
       </div>
     </section>
 
-    <footer>
-      <h3>Shop Title</h3>
-      <ul>
-        <li>
-          <a href="https://instagram.com" target="_blank">
-            <img src="images/logo-instagram.svg"
-          /></a>
-        </li>
-        <li>
-          <a href="https://facebook.com" target="_blank"
-            ><img src="images/logo-facebook-2.svg"
-          /></a>
-        </li>
-      </ul>
+    <footer class="main-footer">
+      <div class="container main-footer-container">
+        <h3 class="name">Meno</h3>
+        <ul class="nav footer-nav">
+          <li>
+            <a href="https://instagram.com" target="_blank">
+              <img class="social-media-icon" src="images/logo-instagram.svg"
+            /></a>
+          </li>
+          <li>
+            <a href="https://facebook.com" target="_blank"
+              ><img class="social-media-icon" src="images/logo-facebook-2.svg"
+            /></a>
+          </li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
