--- a/store.html
+++ b/store.html
@@ -18,10 +18,10 @@
         <li><a href="store.html">Store</a></li>
         <li><a href="about.html">About</a></li>
       </nav>
-      <h1 class="name name-large">Shop Title</h1>
+      <h1 class="name name-large">Meno</h1>
     </header>
     <section>
-      <h2>Items</h2>
+      <h2 class="section-header">Items</h2>
       <div>
         <div><strong>Item title</strong></div>
         <img src="images/filler-img.jpg" />
@@ -74,56 +74,60 @@
         </div>
       </div>
     </section>
-    <section><h2>Cart</h2></section>
-    <div>
-      <strong>ITEM</strong>&lt;&gt; <strong>PRICE</strong>&lt;&gt;
-      <strong>QUANTITY</strong>
-    </div>
-    <div>
-      <img
-        class="cart-img"
-        src="images/filler-img.jpg"
-        width="100"
-        height="100"
-      />
-      <span>Item name</span>&lt;&gt; <span>$14.99</span>&lt;&gt;
-      <input type="number" value="1" />
-      <button role="button">REMOVE</button>
-    </div>
-    <div>
-      <img
-        class="cart-img"
-        src="images/filler-img.jpg"
-        width="100"
-        height="100"
-      />
-      <span>Item name</span>&lt;&gt; <span>$14.99</span>&lt;&gt;
-      <input type="number" value="2" />
-      <button role="button">REMOVE</button>
-    </div>
-    <hr />
-    <div>
-      <strong>Total</strong>
-      <span>$29.98</span>
-    </div>
-    <div>
-      <button role="button">PURCHASE</button>
-    </div>
+    <section>
+      <h2>Cart</h2>
+      <div>
+        <strong>ITEM</strong>&lt;&gt; <strong>PRICE</strong>&lt;&gt;
+        <strong>QUANTITY</strong>
+      </div>
+      <div>
+        <img
+          class="cart-img"
+          src="images/filler-img.jpg"
+          width="100"
+          height="100"
+        />
+        <span>Item name</span>&lt;&gt; <span>$14.99</span>&lt;&gt;
+        <input type="number" value="1" />
+        <button role="button">REMOVE</button>
+      </div>
+      <div>
+        <img
+          class="cart-img"
+          src="images/filler-img.jpg"
+          width="100"
+          height="100"
+        />
+        <span>Item name</span>&lt;&gt; <span>$14.99</span>&lt;&gt;
+        <input type="number" value="2" />
+        <button role="button">REMOVE</button>
+      </div>
+      <hr />
+      <div>
+        <strong>Total</strong>
+        <span>$29.98</span>
+      </div>
+      <div>
+        <button role="button">PURCHASE</button>
+      </div>
+    </section>
 
-    <footer>
-      <h3>Shop Title</h3>
-      <ul>
-        <li>
-          <a href="https://instagram.com" target="_blank">
-            <img src="images/logo-instagram.svg"
-          /></a>
-        </li>
-        <li>
-          <a href="https://facebook.com" target="_blank"
-            ><img src="images/logo-facebook-2.svg"
-          /></a>
-        </li>
-      </ul>
+    <footer class="main-footer">
+      <div class="container main-footer-container">
+        <h3 class="name">Meno</h3>
+        <ul class="nav footer-nav">
+          <li>
+            <a href="https://instagram.com" target="_blank">
+              <img class="social-media-icon" src="images/logo-instagram.svg"
+            /></a>
+          </li>
+          <li>
+            <a href="https://facebook.com" target="_blank"
+              ><img class="social-media-icon" src="images/logo-facebook-2.svg"
+            /></a>
+          </li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
