--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
     </header>
     <section class="content-section container">
       <h2 class="section-header">About</h2>
-      <img class="about-image" src="images/hands.jpg" />
+      <img class="about-image" src="images/hand-heart.jpg" />
 
       <p>
         Welcome to Meno. We're a community of women, men, families and employers
