--- a/index.html
+++ b/index.html
@@ -19,36 +19,45 @@
         <li><a href="about.html">About</a></li>
       </nav>
       <h1 class="name name-large">Meno</h1>
-      <button type="button">This is a button</button>
+      <button class="btn btn-header" type="button">This is a button</button>
       <br />
       <br />
-      <button>&#9658;</button>
+      <!--<button class="btn btn-header btn-play">&#9658;</button>-->
     </header>
-    <section>
-      <h2 class="section-header">Booking List</h2>
+    <section class="content-section container">
+      <h2 class="section-header">Podcasts</h2>
       <div>
-        <div>
-          <strong>Date</strong>&lt;&gt;<span> Address</span>&lt;&gt;<span>
-            Venue</span
-          >&lt;&gt;<button type="button">Buy</button>
-          <hr />
+        <div class="podcast-row">
+          <span class="podcast-item podcast-date">Date</span
+          ><span class="podcast-item podcast-title">Title</span
+          ><span class="podcast-item podcast-author">Author</span>
+          <button class="btn btn-play podcast-item podcast-btn" type="button">
+            &#9658;
+          </button>
         </div>
-        <div>
-          <strong>Date</strong>&lt;&gt;<span> Address</span>&lt;&gt;<span>
-            Venue</span
-          >&lt;&gt;<button type="button">Buy</button>
-          <hr />
+        <div class="podcast-row">
+          <span class="podcast-item podcast-date">Date</span
+          ><span class="podcast-item podcast-title">Title</span
+          ><span class="podcast-item podcast-author">Author</span
+          ><button class="btn btn-play podcast-item podcast-btn" type="button">
+            &#9658;
+          </button>
         </div>
-        <div>
-          <strong>Date</strong>&lt;&gt;<span> Address</span>&lt;&gt;<span>
-            Venue</span
-          >&lt;&gt;<button type="button">Buy</button>
-          <hr />
+        <div class="podcast-row">
+          <span class="podcast-item podcast-date">Date</span
+          ><span class="podcast-item podcast-title">Title</span
+          ><span class="podcast-item podcast-author">Author</span
+          ><button class="btn btn-play podcast-item podcast-btn" type="button">
+            &#9658;
+          </button>
         </div>
-        <div>
-          <strong>Date</strong>&lt;&gt;<span> Address</span>&lt;&gt;<span>
-            Venue</span
-          >&lt;&gt;<button type="button">Buy</button>
+        <div class="podcast-row">
+          <span class="podcast-item podcast-date">Date</span
+          ><span class="podcast-item podcast-title">Title</span
+          ><span class="podcast-item podcast-author">Author</span
+          ><button class="btn btn-play podcast-item podcast-btn" type="button">
+            &#9658;
+          </button>
         </div>
       </div>
     </section>
