--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="main-header">
       <nav class="nav main-nav">
         <li><a href="index.html">Home</a></li>
-        <li><a href="store.html">Store</a></li>
+        <li><a href="store.html">Shop</a></li>
         <li><a href="about.html">About</a></li>
       </nav>
       <h1 class="name name-large">Meno</h1>
