--- a/store.html
+++ b/store.html
@@ -15,62 +15,71 @@
     <header class="main-header">
       <nav class="nav main-nav">
         <li><a href="index.html">Home</a></li>
-        <li><a href="store.html">Store</a></li>
+        <li><a href="store.html">Shop</a></li>
         <li><a href="about.html">About</a></li>
       </nav>
-      <h1 class="name name-large">Meno</h1>
+      <h1 class="name name-large">Shop</h1>
     </header>
-    <section>
+    <section class="container content-section">
       <h2 class="section-header">Items</h2>
-      <div>
-        <div><strong>Item title</strong></div>
-        <img src="images/filler-img.jpg" />
-        <div>
-          <span>$14.99</span>
-          <button role="button">ADD TO CART</button>
+      <div class="shop-item">
+        <span class="shop-item-title">Item title</span>
+        <img class="shop-item-image" src="images/filler-img.jpg" />
+        <div class="shop-item-details">
+          <span class="shop-item-price">$14.99</span>
+          <button class="btn btn-primary shop-item-button" role="button">
+            ADD TO CART
+          </button>
         </div>
       </div>
-      <div>
-        <div><strong>Item title</strong></div>
-        <img src="images/filler-img.jpg" />
-        <div>
-          <span>$14.99</span>
-          <button role="button">ADD TO CART</button>
+      <div class="shop-item">
+        <span class="shop-item-title">Item title</span>
+        <img class="shop-item-image" src="images/filler-img.jpg" />
+        <div class="shop-item-details">
+          <span class="shop-item-price">$14.99</span>
+          <button class="btn btn-primary shop-item-button" role="button">
+            ADD TO CART
+          </button>
         </div>
       </div>
-      <div>
-        <div><strong>Item title</strong></div>
-        <img src="images/filler-img.jpg" />
-        <div>
-          <span>$14.99</span>
-          <button role="button">ADD TO CART</button>
+      <div class="shop-item">
+        <span class="shop-item-title">Item title</span>
+        <img class="shop-item-image" src="images/filler-img.jpg" />
+        <div class="shop-item-details">
+          <span class="shop-item-price">$14.99</span>
+          <button class="btn btn-primary shop-item-button" role="button">
+            ADD TO CART
+          </button>
         </div>
       </div>
-      <div>
-        <div><strong>Item title</strong></div>
-        <img src="images/filler-img.jpg" />
-        <div>
-          <span>$14.99</span>
-          <button role="button">ADD TO CART</button>
+      <div class="shop-item">
+        <span class="shop-item-title">Item title</span>
+        <img class="shop-item-image" src="images/filler-img.jpg" />
+        <div class="shop-item-details">
+          <span class="shop-item-price">$14.99</span>
+          <button class="btn btn-primary shop-item-button" role="button">
+            ADD TO CART
+          </button>
         </div>
       </div>
-    </section>
-    <section>
-      <h2>Merch</h2>
-      <div>
-        <div><strong>Item title</strong></div>
-        <img src="images/filler-img.jpg" />
-        <div>
-          <span>$14.99</span>
-          <button role="button">ADD TO CART</button>
+      <div class="shop-item">
+        <span class="shop-item-title">Item title</span>
+        <img class="shop-item-image" src="images/filler-img.jpg" />
+        <div class="shop-item-details">
+          <span class="shop-item-price">$14.99</span>
+          <button class="btn btn-primary shop-item-button" role="button">
+            ADD TO CART
+          </button>
         </div>
       </div>
-      <div>
-        <div><strong>Item title</strong></div>
-        <img src="images/filler-img.jpg" />
-        <div>
-          <span>$14.99</span>
-          <button role="button">ADD TO CART</button>
+      <div class="shop-item">
+        <span class="shop-item-title">Item title</span>
+        <img class="shop-item-image" src="images/filler-img.jpg" />
+        <div class="shop-item-details">
+          <span class="shop-item-price">$14.99</span>
+          <button class="btn btn-primary shop-item-button" role="button">
+            ADD TO CART
+          </button>
         </div>
       </div>
     </section>
