--- a/store.html
+++ b/store.html
@@ -22,103 +22,122 @@
     </header>
     <section class="container content-section">
       <h2 class="section-header">Items</h2>
-      <div class="shop-item">
-        <span class="shop-item-title">Item title</span>
-        <img class="shop-item-image" src="images/filler-img.jpg" />
-        <div class="shop-item-details">
-          <span class="shop-item-price">$14.99</span>
-          <button class="btn btn-primary shop-item-button" role="button">
-            ADD TO CART
-          </button>
+      <div class="shop-items">
+        <div class="shop-item">
+          <span class="shop-item-title">Item title</span>
+          <img class="shop-item-image" src="images/filler-img.jpg" />
+          <div class="shop-item-details">
+            <span class="shop-item-price">$14.99</span>
+            <button class="btn btn-primary shop-item-button" role="button">
+              ADD TO CART
+            </button>
+          </div>
         </div>
-      </div>
-      <div class="shop-item">
-        <span class="shop-item-title">Item title</span>
-        <img class="shop-item-image" src="images/filler-img.jpg" />
-        <div class="shop-item-details">
-          <span class="shop-item-price">$14.99</span>
-          <button class="btn btn-primary shop-item-button" role="button">
-            ADD TO CART
-          </button>
+        <div class="shop-item">
+          <span class="shop-item-title">Item title</span>
+          <img class="shop-item-image" src="images/filler-img.jpg" />
+          <div class="shop-item-details">
+            <span class="shop-item-price">$14.99</span>
+            <button class="btn btn-primary shop-item-button" role="button">
+              ADD TO CART
+            </button>
+          </div>
         </div>
-      </div>
-      <div class="shop-item">
-        <span class="shop-item-title">Item title</span>
-        <img class="shop-item-image" src="images/filler-img.jpg" />
-        <div class="shop-item-details">
-          <span class="shop-item-price">$14.99</span>
-          <button class="btn btn-primary shop-item-button" role="button">
-            ADD TO CART
-          </button>
+        <div class="shop-item">
+          <span class="shop-item-title">Item title</span>
+          <img class="shop-item-image" src="images/filler-img.jpg" />
+          <div class="shop-item-details">
+            <span class="shop-item-price">$14.99</span>
+            <button class="btn btn-primary shop-item-button" role="button">
+              ADD TO CART
+            </button>
+          </div>
         </div>
-      </div>
-      <div class="shop-item">
-        <span class="shop-item-title">Item title</span>
-        <img class="shop-item-image" src="images/filler-img.jpg" />
-        <div class="shop-item-details">
-          <span class="shop-item-price">$14.99</span>
-          <button class="btn btn-primary shop-item-button" role="button">
-            ADD TO CART
-          </button>
+        <div class="shop-item">
+          <span class="shop-item-title">Item title</span>
+          <img class="shop-item-image" src="images/filler-img.jpg" />
+          <div class="shop-item-details">
+            <span class="shop-item-price">$14.99</span>
+            <button class="btn btn-primary shop-item-button" role="button">
+              ADD TO CART
+            </button>
+          </div>
         </div>
-      </div>
-      <div class="shop-item">
-        <span class="shop-item-title">Item title</span>
-        <img class="shop-item-image" src="images/filler-img.jpg" />
-        <div class="shop-item-details">
-          <span class="shop-item-price">$14.99</span>
-          <button class="btn btn-primary shop-item-button" role="button">
-            ADD TO CART
-          </button>
+        <div class="shop-item">
+          <span class="shop-item-title">Item title</span>
+          <img class="shop-item-image" src="images/filler-img.jpg" />
+          <div class="shop-item-details">
+            <span class="shop-item-price">$14.99</span>
+            <button class="btn btn-primary shop-item-button" role="button">
+              ADD TO CART
+            </button>
+          </div>
         </div>
-      </div>
-      <div class="shop-item">
-        <span class="shop-item-title">Item title</span>
-        <img class="shop-item-image" src="images/filler-img.jpg" />
-        <div class="shop-item-details">
-          <span class="shop-item-price">$14.99</span>
-          <button class="btn btn-primary shop-item-button" role="button">
-            ADD TO CART
-          </button>
+        <div class="shop-item">
+          <span class="shop-item-title">Item title</span>
+          <img class="shop-item-image" src="images/filler-img.jpg" />
+          <div class="shop-item-details">
+            <span class="shop-item-price">$14.99</span>
+            <button class="btn btn-primary shop-item-button" role="button">
+              ADD TO CART
+            </button>
+          </div>
         </div>
       </div>
     </section>
-    <section>
-      <h2>Cart</h2>
-      <div>
-        <strong>ITEM</strong>&lt;&gt; <strong>PRICE</strong>&lt;&gt;
-        <strong>QUANTITY</strong>
+    <section class="container content-section">
+      <h2 class="section-header">Cart</h2>
+      <div class="cart-row">
+        <span class="cart-item cart-header cart-column">ITEM</span>
+        <span class="cart-price cart-header cart-column">PRICE</span>
+        <span class="cart-quantity cart-header cart-column">QUANTITY</span>
+      </div>
+      <div class="cart-items">
+      <div class="cart-row">
+        <div class="cart-item cart-column">
+          <img
+            class="cart-item-img"
+            src="images/filler-img.jpg"
+            width="100"
+            height="100"
+          />
+          <span>Item name</span>
+        </div>
+
+        <span class="cart-price cart-column">$14.99</span>
+        <div class="cart-quantity cart-column">
+          <input class="cart-quantity-input" type="number" value="1" />
+          <button class="btn btn-danger" role="button">
+            REMOVE
+          </button>
+        </div>
       </div>
       <div>
-        <img
-          class="cart-img"
-          src="images/filler-img.jpg"
-          width="100"
-          height="100"
-        />
-        <span>Item name</span>&lt;&gt; <span>$14.99</span>&lt;&gt;
-        <input type="number" value="1" />
-        <button role="button">REMOVE</button>
+        <div class="cart-row">
+          <div class="cart-item cart-column">
+            <img
+              class="cart-item-img"
+              src="images/filler-img.jpg"
+              width="100"
+              height="100"
+            />
+            <span>Item name</span>
+          </div>
+  
+          <span class="cart-price cart-column">$14.99</span>
+          <div class="cart-quantity cart-column">
+            <input class="cart-quantity-input" type="number" value="1" />
+            <button class="btn btn-danger" role="button">
+              REMOVE
+            </button>
+          </div>
+        </div>
       </div>
-      <div>
-        <img
-          class="cart-img"
-          src="images/filler-img.jpg"
-          width="100"
-          height="100"
-        />
-        <span>Item name</span>&lt;&gt; <span>$14.99</span>&lt;&gt;
-        <input type="number" value="2" />
-        <button role="button">REMOVE</button>
-      </div>
-      <hr />
-      <div>
-        <strong>Total</strong>
-        <span>$29.98</span>
-      </div>
-      <div>
-        <button role="button">PURCHASE</button>
-      </div>
+      <div class="cart-total">
+        <strong class="cart-total-title">Total</strong>
+        <span class="cart-total-price">$14.99</span>
+    </div>
+    <button class="btn btn-primary btn-purchase" type="button">PURCHASE</button>
     </section>
 
     <footer class="main-footer">
@@ -138,5 +157,6 @@
         </ul>
       </div>
     </footer>
+    <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
