'remove' and cart total update when selected

--- a/index.html
+++ b/index.html
@@ -80,6 +80,6 @@
         </ul>
       </div>
     </footer>
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="script.js" async></script>
   </body>
 </html>
