--- a/store.html
+++ b/store.html
@@ -135,7 +135,7 @@
       </div>
       <div class="cart-total">
         <strong class="cart-total-title">Total</strong>
-        <span class="cart-total-price">$14.99</span>
+        <span class="cart-total-price">$29.98</span>
     </div>
     <button class="btn btn-primary btn-purchase" type="button">PURCHASE</button>
     </section>
@@ -157,6 +157,6 @@
         </ul>
       </div>
     </footer>
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="script.js" async></script>
   </body>
 </html>
