--- a/about.html
+++ b/about.html
@@ -63,6 +63,6 @@
         </ul>
       </div>
     </footer>
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="script.js" async></script>
   </body>
 </html>
