--- a/about.html
+++ b/about.html
@@ -36,14 +36,15 @@
         which is informed and actively supports the billion women globally who
         are going through menopause right now.
       </p>
-      <p>
-        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-        mollit anim id est laborum."
+      <p class="second">
+        On this website you'll find a plethora of information and resources
+        including podcasts, guidelines, women's stories, and downloadable
+        infographics that you can complete, download and take to your doctors.
+        We'll also be launching a store that sells products that help menopause
+        symptoms - and only the ones that have been scientifically proven to
+        help relive symptoms. You can rest assured that our product range will
+        be of the highest quality, all with natural, organic, and locally
+        sourced ingredients.
       </p>
     </section>
     <footer class="main-footer">
