--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400&display=swap"
       rel="stylesheet"
     />
-    <title>Shop</title>
+    <title>Podcasts</title>
   </head>
   <body>
     <header class="main-header">
