--- a/store.html
+++ b/store.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400&display=swap"
       rel="stylesheet"
     />
-    <title>Store</title>
+    <title>Shop</title>
   </head>
   <body>
     <header class="main-header">
@@ -27,7 +27,7 @@
           <span class="shop-item-title">Item title</span>
           <img class="shop-item-image" src="images/filler-img.jpg" />
           <div class="shop-item-details">
-            <span class="shop-item-price">$14.99</span>
+            <span class="shop-item-price">£14.99</span>
             <button class="btn btn-primary shop-item-button" role="button">
               ADD TO CART
             </button>
@@ -37,7 +37,7 @@
           <span class="shop-item-title">Item title</span>
           <img class="shop-item-image" src="images/filler-img.jpg" />
           <div class="shop-item-details">
-            <span class="shop-item-price">$14.99</span>
+            <span class="shop-item-price">£14.99</span>
             <button class="btn btn-primary shop-item-button" role="button">
               ADD TO CART
             </button>
@@ -47,7 +47,7 @@
           <span class="shop-item-title">Item title</span>
           <img class="shop-item-image" src="images/filler-img.jpg" />
           <div class="shop-item-details">
-            <span class="shop-item-price">$14.99</span>
+            <span class="shop-item-price">£14.99</span>
             <button class="btn btn-primary shop-item-button" role="button">
               ADD TO CART
             </button>
@@ -57,7 +57,7 @@
           <span class="shop-item-title">Item title</span>
           <img class="shop-item-image" src="images/filler-img.jpg" />
           <div class="shop-item-details">
-            <span class="shop-item-price">$14.99</span>
+            <span class="shop-item-price">£14.99</span>
             <button class="btn btn-primary shop-item-button" role="button">
               ADD TO CART
             </button>
@@ -67,7 +67,7 @@
           <span class="shop-item-title">Item title</span>
           <img class="shop-item-image" src="images/filler-img.jpg" />
           <div class="shop-item-details">
-            <span class="shop-item-price">$14.99</span>
+            <span class="shop-item-price">£14.99</span>
             <button class="btn btn-primary shop-item-button" role="button">
               ADD TO CART
             </button>
@@ -77,7 +77,7 @@
           <span class="shop-item-title">Item title</span>
           <img class="shop-item-image" src="images/filler-img.jpg" />
           <div class="shop-item-details">
-            <span class="shop-item-price">$14.99</span>
+            <span class="shop-item-price">£14.99</span>
             <button class="btn btn-primary shop-item-button" role="button">
               ADD TO CART
             </button>
@@ -92,52 +92,14 @@
         <span class="cart-price cart-header cart-column">PRICE</span>
         <span class="cart-quantity cart-header cart-column">QUANTITY</span>
       </div>
-      <div class="cart-items">
-      <div class="cart-row">
-        <div class="cart-item cart-column">
-          <img
-            class="cart-item-img"
-            src="images/filler-img.jpg"
-            width="100"
-            height="100"
-          />
-          <span>Item name</span>
-        </div>
-
-        <span class="cart-price cart-column">$14.99</span>
-        <div class="cart-quantity cart-column">
-          <input class="cart-quantity-input" type="number" value="1" />
-          <button class="btn btn-danger" role="button">
-            REMOVE
-          </button>
-        </div>
-      </div>
-      <div>
-        <div class="cart-row">
-          <div class="cart-item cart-column">
-            <img
-              class="cart-item-img"
-              src="images/filler-img.jpg"
-              width="100"
-              height="100"
-            />
-            <span>Item name</span>
-          </div>
-  
-          <span class="cart-price cart-column">$14.99</span>
-          <div class="cart-quantity cart-column">
-            <input class="cart-quantity-input" type="number" value="1" />
-            <button class="btn btn-danger" role="button">
-              REMOVE
-            </button>
-          </div>
-        </div>
-      </div>
+      <div class="cart-items"></div>
       <div class="cart-total">
         <strong class="cart-total-title">Total</strong>
-        <span class="cart-total-price">$29.98</span>
-    </div>
-    <button class="btn btn-primary btn-purchase" type="button">PURCHASE</button>
+        <span class="cart-total-price">£0</span>
+      </div>
+      <button class="btn btn-primary btn-purchase" type="button">
+        PURCHASE
+      </button>
     </section>
 
     <footer class="main-footer">
